[NTP] Add voiceover support to voice search dialog

Added a tooltip for the close button. This will be read as "close"
instead of "times".

Also add "aria-live" to the status message. This will notify voiceover
that the text has changed and will read it to the user.

Bug: 779300,699681
Change-Id: Ifdbfb766216942a043a5f7be77f6c5fa513d89ae
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1565678
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Ramya Nagarajan <ramyan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#651418}
Former-commit-id: a4b204e1f70d14a8ec15e96e41607843a5dadfbf