chrome/browser/resources/local_ntp/externs.js
@@ -378,4 +378,5 @@ configData.translatedStrings.tryAgain;
 configData.translatedStrings.undoThumbnailRemove;
 configData.translatedStrings.uploadImage;
 configData.translatedStrings.urlField;
+configData.translatedStrings.voiceCloseTooltip;
 configData.translatedStrings.waiting;
